[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clash-script"
version = "0.1.0"
authors = [
  { name = "Your Name" },
]
description = "Clash of Clans player finder using Streamlit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.31.0",
  "polars>=0.19.0",  # Replaced pandas with polars
  "requests>=2.31.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]  # This tells Hatch to include all Python files in the project directory

[tool.ruff]
line-length = 100